@@ -1,5 +1,10 @@
 2011-01-23  Lars Ingebrigtsen  <larsi@gnus.org>
 
+	* gnus-html.el (gnus-html-image-fetched): Kill the buffer anyway, and
+	fix the bug in url-http.el instead.
+
+	* shr.el (shr-image-fetched): Ditto.
+
 	* shr.el (shr-image-fetched): Avoid having point move in the article
 	buffer.
 
